Color compatibility section

--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -24,6 +24,8 @@
 \newcommand{\adjStrength}{\text{str}}
 \newcommand{\size}{A}
 
+\newcommand{\colorCompatTerm}{\Phi^{ColorCompat}}
+
 % Notational conventions:
 
 % Our model: $\model$. A term in our model: $\term$. The vector of weights for the entire model: $\weights$. The weight for a particular term: $\weights_\term$.
