--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -16,6 +16,8 @@
 \newcommand{\expectation}{\mathds{E}}
 
 \newcommand{\prop}{\pi}
+\newcommand{\unaryProps}{\Pi^{Unary}}
+\newcommand{\binaryProps}{\Pi^{Binary}}
 \newcommand{\groupTerm}{\Phi^{Group}_\pi}
 \newcommand{\segTerm}{\Phi^{Seg}_\pi}
 \newcommand{\adjTerm}{\Phi^{Adj}_\pi}
@@ -23,8 +25,15 @@
 \newcommand{\adj}{\text{adj}}
 \newcommand{\adjStrength}{\text{str}}
 \newcommand{\size}{A}
+\newcommand{\groupInstStats}{\phi^{Seg}_\pi}
+\newcommand{\segInstStats}{\phi^{Group}_\pi}
+\newcommand{\adjInstStats}{\phi^{Adj}_\pi}
 
 \newcommand{\colorCompatTerm}{\Phi^{ColorCompat}}
+\newcommand{\factor}{\mathcal{F}}
+\newcommand{\segprime}{\segment^{\prime}}
+\newcommand{\groupprime}{\group^{\prime}}
+
 
 % Notational conventions:
 
