--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -282,3 +282,22 @@ language={English}
   year={2004},
   publisher={Quayside Publishing Group}
 }
+
+@inproceedings{ColorNamingModels,
+  title={Color naming models for color selection, image editing and palette design},
+  author={Heer, J. and Stone, M.},
+  booktitle={Proceedings of the 2012 ACM annual conference on Human Factors in Computing Systems},
+  pages={1007--1016},
+  year={2012},
+  organization={ACM}
+}
+
+@article{AlbersInteractionOfColor,
+  title={The interaction of color},
+  author={Albers, J.},
+  journal={Art news},
+  volume={62},
+  number={1},
+  pages={33--35},
+  year={1963}
+}
