Notes on a bunch of stuff, particularly in the model section.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -301,3 +301,22 @@ language={English}
   pages={33--35},
   year={1963}
 }
+
+@inproceedings{ThemeEnhancement,
+ author = {Wang, Baoyuan and Yu, Yizhou and Wong, Tien-Tsin and Chen, Chun and Xu, Ying-Qing},
+ title = {Data-driven image color theme enhancement},
+ booktitle = {ACM SIGGRAPH Asia 2010 papers},
+ series = {SIGGRAPH ASIA '10},
+ year = {2010},
+ isbn = {978-1-4503-0439-9},
+ location = {Seoul, South Korea},
+ pages = {146:1--146:10},
+ articleno = {146},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1866158.1866172},
+ doi = {10.1145/1866158.1866172},
+ acmid = {1866172},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {color optimization, color theme, histograms, soft segmentation, texture classes},
+} 
