--- a/latex/siggraph2013/spatialcolor.tex
+++ b/latex/siggraph2013/spatialcolor.tex
@@ -1,4 +1,4 @@
-We formulate the problem of generating colorings for a pattern template as finding high-probability colorings. Formally, we define a pattern template $\pattern = (\segments, \groups, \colorVars, \features)$, where $\groups$ is a set of individual groups $\group$, and $\segments$ is a set of individual segments $\segment$, $\colorVars$ is a set of color variables, and $\features$ is a set of features over different groups, segments, and adjacencies within the pattern. Each $\group$ and $\segment$ is associated with a color variable $C(\group)$ and $C(\segment)$ respectively. Because all segments within a color group are defined to have the same color, $C(group(\segment))$ always has the same value as $C(\segment)$, so for the rest of the paper we equate them as the same variable. A coloring $\colors$ is an assignment of colors to color variables.
+We formulate the problem of generating colorings for a pattern template as finding high-probability colorings. Formally, we define a pattern template $\pattern = (\segments, \groups, \colorVars, \features)$, where $\groups$ is a set of individual groups $\group$, and $\segments$ is a set of individual segments $\segment$, $\colorVars$ is a set of color variables, and $\features$ is a set of features over different groups, segments, and adjacencies within the pattern. Each $\group$ and $\segment$ is associated with a color variable $\colorVars(\group)$ and $\colorVars(\segment)$ respectively. All segments within a color group have the same color by definition, so $\colorVars(\text{group}(\segment)) = \colorVars(\segment)$. A coloring $\colors$ is an assignment of colors to color variables.
 
 We model the probability of a coloring for a particular pattern template as a product of different terms $\term$:   
 \begin{equation*}
@@ -15,9 +15,9 @@ Previous work has shown that we can enhance the aesthetic appeal of an image by 
 
 For the term's sufficient statistics function, we extract a color theme by taking the colors of the 5 largest color groups, and order them by size. If there are fewer than 5 color groups, we cycle the colors of the groups in order of size to fill the rest of theme. We then compute their log-normalized theme rating using O'Donovan's compatibility model. Informal inspection of 5-color patterns showed that size-ordering of the colors tended to produce themes that were rated higher than random orderings, though rated lower than the optimal ordering on average. Formally:
 \begin{equation*}
-\colorCompatTerm(\colors, \pattern) = ln(compat(theme(\colors, \pattern))/5)
+\colorCompatTerm(\colors, \pattern) = \ln(\text{compat}(\text{theme}(\colors, \pattern))/5)
 \end{equation*}
-where $theme$ is the ordered theme extracted from a pattern and $compat$ is the predicted rating from the O'Donovan model.
+where $theme$ is the ordered theme extracted from a pattern and $compat$ is the predicted rating from the O'Donovan model.~\remark{D: Note that there is nothing special about the O'Donovan model; we could plug in any color compatibility/harmony model that allows us to `score' a set of colors}
 
 \remark{S: To get more justification for the ordering criteria, we can also try looking at the ordered themes associated patterns and see if they look reasonable. I think we can also try getting the optimal rating of the top 5 colors in MATLAB (instead of having Scala pass permutations 120 times to MATLAB) to see how slow it is...or for comparison}.
 
@@ -32,7 +32,7 @@ To capture these dependencies, we include spatial terms over groups, segments, a
 \textbf{Group and segment terms}
 Both global group features as well as local segment features affect the appearance of a color assignment. The total area of a group and overall spread of its member segments correspond to the overall proportion and spread of its assigned color within an image. In addition, the size and shape of member segments may impact the color a group takes on. As an example, smaller segments may often be more saturated, and a group composed of many small segments may be more likely to be saturated than a group composed of a few small segments but also one large segment \remark{S: Made up example. Should probably find one that holds in our data}.   
 
-In general, our spatial terms score color assignments based on the conditional probability of properties of colors (i.e. lightness or colorfulness) given either group, segment, or adjacency features. We compute probabilities over color properties instead of individual colors to allow for more generalization over different colors that have not been seen in the training examples. For group and segment terms, we use the unary properties lightness and colorfulness in CIELAB space, a perception-based colorspace. We also use color name counts (counts of how many times a color is described with different names) and name saliency (how uniquely a color is named), as described by Heer and Stone~\shortcite{ColorNamingModels}. While lightness and colorfulness capture perceptual properties of color, name saliency and color name counts capture more categorical properties. More details on the computation of these color properties and region features are included in the Appendix.
+In general, our spatial terms score color assignments based on the conditional probability of properties of colors (i.e. lightness or colorfulness) given either group, segment, or adjacency features. We compute probabilities over color properties instead of individual colors to allow for more generalization over different colors that have not been seen in the training examples.~\remark{D: This probably belongs before the `Group and segment terms' section, since it applies to all spatial terms.} For group and segment terms, we use the unary properties lightness and colorfulness in CIELAB space, a perception-based colorspace. We also use color name counts (counts of how many times a color is described with different names) and name saliency (how uniquely a color is named), as described by Heer and Stone~\shortcite{ColorNamingModels}.~\remark{D: I'm not sure how, but this list should stand out more---it shouldn't be buried in some text. A bulleted list is probably too much, though.	} While lightness and colorfulness capture perceptual properties of color, name saliency and color name counts capture more categorical properties. More details on the computation of these color properties and region features are included in the Appendix.~\remark{D: We haven't yet (even qualitatively) mentioned what the segment features are. We should do that somewhere in here.}
 
 Our model includes one group and segment term per color property. The group term for property $\prop \in \unaryProps$ has the sufficient statistics function:
 \begin{equation*}
@@ -50,11 +50,12 @@ We generate factors over each color variable by gathering its associated group a
  \begin{equation*}
  \factor_\pattern(\colorVars(\group)) = exp\left(\sum_{\prop \in \unaryProps} \groupInstStats(\group) \sum_{\segment \in \group} \segInstStats(\segment)\right) 
  \end{equation*}
+\remark{D: Hmm. Yeah, this whole `relating things back to the more ``graphical'' notion of factor graphs' might not be a bad idea. It's a little confusing right now, though. I may take a crack at it.}
 
 \textbf{Segment adjacency terms}
 While group and segment terms model the dependency of color assignments on features of same-color regions, they do not capture relationships among different-color regions. In particular, adjacent color regions can have strong effects on their neighbor's perceived color, for example making colors seem more or less saturated or causing vibrating boundaries if adjacent lightness and colorfulness are too similar~\cite{AlbersInteractionOfColor}. Thus, we also add segment adjacency terms to the model.
 
-Good color assignments to adjacent segments may depend on specific features of their adjacency. For example, a square enclosed by a thin border appears different than a square enclosed by a larger square, and different than a square side-by-side with another square. Thus, when computing features of an adjacency we include the features of the member segments as well as how much one neighbor encloses another. The Appendix contains more details on feature computation for adjacencies. 
+Good color assignments to adjacent segments may depend on specific features of their adjacency. For example, a square enclosed by a thin border appears different than a square enclosed by a larger square, and different than a square side-by-side with another square. Thus, when computing features of an adjacency we include the features of the member segments as well as how much one neighbor encloses another. The Appendix contains more details on feature computation for adjacencies.~\remark{D: These anecdotal examples go by quickly and are hard to visualize. We could actually make some pictures...} 
 
 Analogous to the group and segment terms, adjacency terms compute statistics based on the conditional probability distribution of binary color properties given the adjacency features. Binary color properties include relative lightness, relative colorfulness, perceptual distance in LAB space, and color name cosine similarity ~\cite{ColorNamingModels}.
 
@@ -74,19 +75,18 @@ The sufficient statistics function for each binary property is:
 
 \subsection{Learning Probability Distributions}
 
-As described previously, each group, segment, and adjacency term is associated with a conditional probability distributions (pdfs) of the term's color property given instance features, from which it computes term statistics. To learn these conditional pdfs, we adapt the approach of Charpiat et al.~\shortcite{MultimodalColorization}, where we first discretize the distribution by binning property values. Bins are determined by K-means clustering on property values found in the training examples. However, we use multinomial logistic regression to predict the probability of a bin given a feature vector for an instance, instead of kernel density estimation on training instances that fall in the same bin. 
+As described previously, each group, segment, and adjacency term is associated with a conditional probability distribution (pdf) of the term's color property given instance features, from which it computes term statistics~\remark{D: What's an `instance feature?' (That's a devil's advocate question: \emph{I} know what it means, but a new reader might not)}. To learn these pdfs, we adapt the approach of Charpiat et al.~\shortcite{MultimodalColorization}, where we first discretize the distribution by binning property values. Bins are determined by K-means clustering on property values found in the training examples. However, we use multinomial logistic regression to predict the probability of a bin given a feature vector for an instance, instead of kernel density estimation on training instances that fall in the same bin. 
 
-TODO: multinomial logistic regression instead of KDE+KNN because....faster during training? advantage of not having to store training instances, and performance seemed reasonable qualitatively. In addition, inspecting coefficients could be informative.  
+TODO: multinomial logistic regression instead of KDE+KNN because....advantage of not having to store training instances, faster at inference time (though a bit slower at training time), and performance seemed reasonable qualitatively (or, was no worse than KNN). In addition, inspecting coefficients could be informative.  
 
 The specific form of the training input to the regression depends on the term. For example, for the group term statistics $\groupTerm$, training instances from the training dataset $\dataset$ have the form 
 
 $(bin(\prop(\colors(\group))), \features(\group)) \in (\pattern, \colors) \in \dataset$ 
 
-where the bin indicates the class label. To give each pattern template in the training set equal weight in the regression, we weight each group example by one over the number of groups in the template. Similar instances and instance weightings are used for segment and adjacency term regressions, but with the respective segment and adjacency features.
+where the bin indicates the class label. To give each pattern template in the training set equal weight in the regression, we weight each group example by one over the number of groups in the template. Similar instances and instance weightings are used for segment and adjacency term regressions, but with the respective segment and adjacency features.~\remark{D: Mentioning the weighting is important for reproducibility, but showing the form of the examples feels confusing/distracting.}
 
-Finally, to evaluate the probability density of a property value, we use kernel density estimation on the bins. We set the number of bins to be ? and the bandwidth of the kernel to be ?. 
+Finally, to evaluate the probability density of a property value, we use kernel density estimation on the bins.~\remark{D: We should cite~\cite{ThemeEnhancement} here, as we based this part of the technique on theirs.} We set the number of bins to be ? and the bandwidth of the kernel to be ?.~\remark{D: Kernel bandwidth is set exactly the same as in~\cite{ThemeEnhancement}. Number of bins...still up in the air whether we will use cross-validation or `an empirically chosen value.'}
 
-This approach is relatively fast. Because the features of a pattern template do not change during inference, we only need to compute the discretized conditional pdfs once per tuple of group, segment, or adjacency and their associated property when generating a coloring.
+This approach is relatively fast. Because the features of a pattern template do not change during inference, we only need to compute the discretized conditional pdfs once per tuple of group, segment, or adjacency and their associated property when generating a coloring.~\remark{D: \emph{I} know what you mean, but I think readers would find this hard to parse. Maybe take a couple more sentences to make this clear?}
 
-
-TODO: possibly mention importance of multimodality at the beginning..how approaches that predict some best property value (i.e. averaging), don't take that into account.
+TODO: possibly mention importance of multimodality at the beginning..how approaches that predict some best property value (i.e. averaging), don't take that into account.~\remark{D: Agreed. This should probably go all the way up at the beginning of Section~\ref{sec:spatialCompat}, where we first introduce the use of CPDs.}
