--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -25,8 +25,8 @@
 \newcommand{\adj}{\text{adj}}
 \newcommand{\adjStrength}{\text{str}}
 \newcommand{\size}{A}
-\newcommand{\groupInstStats}{\phi^{Seg}_\pi}
-\newcommand{\segInstStats}{\phi^{Group}_\pi}
+\newcommand{\groupInstStats}{\phi^{Group}_\pi}
+\newcommand{\segInstStats}{\phi^{Seg}_\pi}
 \newcommand{\adjInstStats}{\phi^{Adj}_\pi}
 
 \newcommand{\colorCompatTerm}{\Phi^{ColorCompat}}
